--- a/sass/custom/_colors.scss
+++ b/sass/custom/_colors.scss
@@ -4,9 +4,9 @@
 
 $page-bg: #F3F3F3;
 $main-bg: #F3F3F3;
-$header-bg: #FEDC00;
+$header-bg: #F3F3F3;
 //$subtitle-color: lighten($header-bg, 58);
-$nav-bg: desaturate(lighten(#FEDC00, 18), 5);
+$nav-bg: desaturate(lighten(#F3F3F3, 18), 5);
 //$sidebar-bg: desaturate(#eceff5, 8);
 //$sidebar-link-color: saturate(#526f9a, 10);
 //$sidebar-link-color-hover: darken(#7ab662, 9);
