--- a/sass/partials/_blog.scss
+++ b/sass/partials/_blog.scss
@@ -10,6 +10,7 @@ article {
     background: $img-border bottom left repeat-x;
     h1 {
       margin: 0;
+      font-weight:normal;
       a { text-decoration: none;
         &:hover { text-decoration: underline; } }
     }
