--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -2,9 +2,9 @@ body > footer {
   @extend .sans;
   font-size: .8em;
   color: $footer-color;
-  text-shadow: lighten($footer-bg, 5) 0 1px;
-  background-color: $footer-bg;
-  @include background(image-url('noise.png'), linear-gradient(lighten($footer-bg, 8), $footer-bg, darken($footer-bg, 11)));
+  //text-shadow: lighten($footer-bg, 5) 0 1px;
+  //background-color: $footer-bg;
+  //@include background(image-url('noise.png'), linear-gradient(lighten($footer-bg, 8), $footer-bg, darken($footer-bg, 11)));
   border-top: 1px solid $footer-border-top;
   position: relative;
   padding-top: 1em;
