--- a/sass/base/_theme.scss
+++ b/sass/base/_theme.scss
@@ -72,7 +72,7 @@ html {
 }
 body {
   > div {
-    background: $sidebar-bg;
+    background: none;
     border-bottom: 1px solid $page-border-bottom;
     > div {
       background: $main-bg;
