--- a/source/_includes/asides/pinboard.html
+++ b/source/_includes/asides/pinboard.html
@@ -1,8 +1,8 @@
 {% if site.pinboard_user %}
-<section>
-  <h1>Bookmarks</h1>
-  <ul id="pinboard_linkroll">Fetching linkroll...</ul>
-  <p><a href="http://pinboard.in/u:{{ site.pinboard_user }}">See More</a></p>
+<section id="curated-links">
+  <h1>Curated Links</h1>
+  <ul id="pinboard_linkroll">Fetching curator...</ul>
+  
 </section>
 <script type="text/javascript">
   var linkroll = 'pinboard_linkroll'; //id target for pinboard list
