--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -1,4 +1,4 @@
 <section>
-	<h1>About Dan Woodward</h1>
-  <p>I'm Dan Woodward. Parter of Woodward Assoc, font end designer blah lorem ipsum tobago tornado burning volic rustium blanco.</p>
+	<h1>About</h1>
+  <p>I'm Dan Woodward. Parter of <a href="http://woodwardassoc.com">Woodward Assoc</a>, font end designer blah lorem ipsum tobago tornado burning volic rustium blanco.</p>
 </section>
