--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -5,7 +5,7 @@ $mono: Menlo, Monaco, "Andale Mono", "lucida console", "Courier New", monospace;
 .heading {
    font-family: Georgia, Times, "Times New Roman", serif;
 }
-.sans { font-family: 'Lucida Grande', 'Lucida Sans Unicode', Arial, sans-serif; }
+.sans { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; }
 .serif { font-family:Georgia, Times, "Times New Roman", serif; }
 .mono { font-family: $mono; }
 
