--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -1,6 +1,5 @@
 <ul role=main-navigation>
-  <li><a href="{{ root_url }}/">Dan Woodward</a></li>
-  <li><a href="{{ root_url }}">Home</a></li>
-  <li><a href="{{ root_url }}/archives">Archives</a></li>
+  <li id="logo"><a href="{{ root_url }}/">Dan Woodward</a></li>
+  <!-- <li><a href="{{ root_url }}/archives">Archives</a></li> -->
   <li><a href="{{ root_url }}/about">About</a></li>
 </ul>
