--- a/source/_layouts/page.html
+++ b/source/_layouts/page.html
@@ -7,7 +7,7 @@ layout: default
   {% if page.title %}
   <header>
     <h1 class="entry-title">{{ page.title | titlecase }}</h1>
-    {% if page.date %}<p class="meta">{% include post/date.html %}</p>{% endif %}
+    {% unless page.meta == false %}{% if page.date %}<p class="meta">{% include post/date.html %}</p>{% endif %}{% endunless %}
   </header>
   {% endif %}
   {{ content }}
